--- a/easy.html
+++ b/easy.html
@@ -27,6 +27,9 @@
                 tipp.value = "";
             }
         </script>
+        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+        <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
+        <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     </head>
     <body>
         <header>
@@ -40,13 +43,13 @@
         </header>
         <section id="site">
             <form onsubmit="addFahrt(); return false;">
-                <table id="eingabe">
-                    <td><input type="text" title="Nummer im Format xxxxx,xx" name="numer" value="" pattern="\d+(.\d{1})?" required="required" id="price" placeholder="Preis" autofocus required></li>
-                    <td><input type="text" title="Nummer im Format xxxxx,xx" name="numer" value="" pattern="\d+(.\d{1})?" required="required" id="tipp" placeholder="Trinkgeld" required></li>
-                    <td><input type="submit"></li>
+                <table class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label" id="eingabe">
+                    <td><input class="mdl-textfield__input" type="text" title="Nummer im Format xxxxx,xx" name="numer" value="" pattern="\d+(.\d{1})?" required="required" id="price" placeholder="Preis" autofocus required></li>
+                    <td><input class="mdl-textfield__input" type="text" title="Nummer im Format xxxxx,xx" name="numer" value="" pattern="\d+(.\d{1})?" required="required" id="tipp" placeholder="Trinkgeld" required></li>
+                    <td><input type="submit" class="mdl-button mdl-js-button mdl-button--raised" ></li>
                 </table>
             </form>
-            
+            <div>
             <table id="list">
                 <tr>
                     <th width="10px">Nr.: </th>
@@ -59,6 +62,7 @@
             <table id="sum">
 
             </table>
+        </div>
         </section>
     </body>
 </html>
