--- a/easy.html
+++ b/easy.html
@@ -44,9 +44,9 @@
         <section id="site">
             <form onsubmit="addFahrt(); return false;">
                 <table class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label" id="eingabe">
-                    <td><input class="mdl-textfield__input" type="text" title="Nummer im Format xxxxx,xx" name="numer" value="" pattern="\d+(.\d{1})?" required="required" id="price" placeholder="Preis" autofocus required></li>
-                    <td><input class="mdl-textfield__input" type="text" title="Nummer im Format xxxxx,xx" name="numer" value="" pattern="\d+(.\d{1})?" required="required" id="tipp" placeholder="Trinkgeld" required></li>
-                    <td><input type="submit" class="mdl-button mdl-js-button mdl-button--raised" ></li>
+                    <td><input class="mdl-textfield__input" type="text" title="Nummer im Format xxxxx,xx" name="numer" value="" pattern="\d+(.\d{1})?" required="required" id="price" placeholder="Preis" autofocus required tabindex="1"></li>
+                    <td><input class="mdl-textfield__input" type="text" title="Nummer im Format xxxxx,xx" name="numer" value="" pattern="\d+(.\d{1})?" required="required" id="tipp" placeholder="Trinkgeld" required tabindex="2"></li>
+                    <td><input type="submit" class="mdl-button mdl-js-button mdl-button--raised" tabindex="3"></li>
                 </table>
             </form>
             <div>
