--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </div>
         </header>
         <section id="site">
-            <form onsubmit="addFahrt(); return false;">
+            <form autocomplete="off" onsubmit="addFahrt(); return false;">
                 <table class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label" id="eingabe">
                     <td><input class="mdl-textfield__input" type="text" title="Nummer im Format xxxxx,xx" name="numer" value="" pattern="\d+(.\d{1})?" required="required" id="price" placeholder="Preis" autofocus required tabindex="1"></li>
                     <td><input class="mdl-textfield__input" type="text" title="Nummer im Format xxxxx,xx" name="numer" value="" pattern="\d+(.\d{1})?" required="required" id="tipp" placeholder="Trinkgeld" required tabindex="2"></li>
