--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>EasyCar Fahrten</title>
         <meta charset="utf-8">
-        <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" type="text/css" href="./css/main.css">
         <script>
             var count = 0;
             var summe1 = 0.0;
@@ -33,11 +33,11 @@
     </head>
     <body>
         <header>
-            <div id="logo">
+            <div id="logoleft">
                 <img src="./img/Logo.png" alt="logo"> 
             </div>
 
-            <div id="namelogo">
+            <div id="logoright">
                 <img src="./img/NameLogo.png" alt="logo2">
             </div>
         </header>
