--- a/index.html
+++ b/index.html
@@ -27,9 +27,6 @@
                 tipp.value = "";
             }
         </script>
-        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-        <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
-        <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     </head>
     <body>
         <header>
@@ -44,25 +41,25 @@
         <section id="site">
             <form autocomplete="off" onsubmit="addFahrt(); return false;">
                 <table class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label" id="eingabe">
-                    <td><input class="mdl-textfield__input" type="text" title="Nummer im Format xxxxx,xx" name="numer" value="" pattern="\d+(.\d{1})?" required="required" id="price" placeholder="Preis" autofocus required tabindex="1"></li>
-                    <td><input class="mdl-textfield__input" type="text" title="Nummer im Format xxxxx,xx" name="numer" value="" pattern="\d+(.\d{1})?" required="required" id="tipp" placeholder="Trinkgeld" required tabindex="2"></li>
+                    <td><input type="text" value="" pattern="\d+(.\d{1})?" required="required" id="price" placeholder="Preis" autofocus required tabindex="1"></li>
+                    <td><input type="text" value="" pattern="\d+(.\d{1})?" required="required" id="tipp" placeholder="Trinkgeld" required tabindex="2"></li>
                     <td><input type="submit" class="mdl-button mdl-js-button mdl-button--raised" tabindex="3"></li>
                 </table>
             </form>
             <div>
-            <table id="list">
-                <tr>
-                    <th width="10px">Nr.: </th>
-                    <th width="50px">Preis: </th>
-                    <th width="50px">Trinkgeld: </th>
-                    <th width="100px">Uhrzeit: </th>
-                    <th width="100px">Datum: </th>
-                </tr>
-            </table>
-            <table id="sum">
+                <table id="list">
+                    <tr>
+                        <th width="10px">Nr.: </th>
+                        <th width="50px">Preis: </th>
+                        <th width="50px">Trinkgeld: </th>
+                        <th width="100px">Uhrzeit: </th>
+                        <th width="100px">Datum: </th>
+                    </tr>
+                </table>
+                <table id="sum">
 
-            </table>
-        </div>
+                </table>
+            </div>
         </section>
     </body>
 </html>
