--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
             </div>
         </header>
         <section id="site">
+            <div>
             <form autocomplete="off" onsubmit="addFahrt(); return false;">
                 <table id="eingabe">
                     <td><input type="text" value="" pattern="\d+(.\d{1})?" required="required" id="price" placeholder="Preis" autofocus required tabindex="1"></li>
@@ -58,6 +59,7 @@
            <table id="sum">
 
            </table>
+        </div>
         </section>
     </body>
 </html>
