--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
                 </table>
             </form>
             <table id="list">
+                <thead>
                <tr>
                    <th width="10px">Nr.: </th>
                    <th width="50px">Preis: </th>
@@ -56,6 +57,7 @@
                    <th width="100px">Uhrzeit: </th>
                    <th width="100px">Datum: </th>
                </tr>
+            </thead>
            </table>
            <table id="sum">
 
