--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <div>
             <form autocomplete="off" onsubmit="addFahrt(); return false;">
                 <table id="eingabe">
-                    <td><input type="text" value="" pattern="\d+(.\d{1})?" required="required" id="price" placeholder="Preis" autofocus required tabindex="1"></li>
+                    <td><input type="text" value="" pattern="\d*" required="required" id="price" placeholder="Preis" autofocus required tabindex="1"></li>
                     <td><input type="text" value="" pattern="\d+(.\d{1})?" required="required" id="tipp" placeholder="Trinkgeld" required tabindex="2"></li>
                     <td><input type="submit" tabindex="3"></li>
                 </table>
