--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <table id="eingabe">
                     <td><input type="text" value="" inputmode="numeric" pattern="\d*" required="required" id="price" placeholder="Preis" autofocus required tabindex="1"></li>
                     <td><input type="text" value="" inputmode="numeric" pattern="\d+(.\d{1})?" required="required" id="tipp" placeholder="Trinkgeld" required tabindex="2"></li>
-                    <td><input type="submit" tabindex="3"></li>
+                    <td><input id="submit"type="submit" tabindex="3"></li>
                 </table>
             </form>
             <table id="list">
