--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 price.value = "";
                 tipp.value = "";
                 window.onbeforeunload = function() {
-                  return "bist du sicher";
+                  return "Data will be lost if you leave the page, are you sure?";
                 };
             }
         </script>
