--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <div>
             <form autocomplete="off" onsubmit="addFahrt(); return false;">
                 <table id="eingabe">
-                    <td><input type="text" value="" inputmode="numeric" pattern="\d*" required="required" id="price" placeholder="Preis" autofocus required tabindex="1"></li>
+                    <td><input type="text" value="" inputmode="numeric" pattern="\d+(.\d{1})?" required="required" id="price" placeholder="Preis" autofocus required tabindex="1"></li>
                     <td><input type="text" value="" inputmode="numeric" pattern="\d+(.\d{1})?" required="required" id="tipp" placeholder="Trinkgeld" required tabindex="2"></li>
                     <td><input id="submit"type="submit" tabindex="3"></li>
                 </table>
